--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:13:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.createBookingAndVerifyResponse(com.mbm.bookingpojos.Booking,java.lang.reflect.Method)[pri:1, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">createBookingAndVerifyResponse</td> 
-  <td>main@136157810</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:13:10</td>   <td>5672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Method)[pri:3, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">getAccessTokenAndVerifyResponse</td> 
-  <td>main@136157810</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:13:08</td>   <td>4150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.Method)[pri:2, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">getBookingDetailsAndVerifyResponse</td> 
-  <td>main@136157810</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:12:56</td>   <td>-7832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getBookingIdsAndVerifyResponse(java.lang.reflect.Method)[pri:0, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">getBookingIdsAndVerifyResponse</td> 
-  <td>main@136157810</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:13:14</td>   <td>9628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getDeleteBooking(java.lang.reflect.Method)[pri:6, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">getDeleteBooking</td> 
-  <td>main@136157810</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:13:13</td>   <td>8357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getPartialUpdateBooking(java.lang.reflect.Method)[pri:5, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">getPartialUpdateBooking</td> 
-  <td>main@136157810</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>25/03/07 01:13:11</td>   <td>6961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getUpdateBookingAndVerifyResponse(java.lang.reflect.Method)[pri:4, instance:com.mbm.bookingtests.BookingTests@6adbc9d]">getUpdateBookingAndVerifyResponse</td> 
-  <td>main@136157810</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="cd8c7a">  <td>25/08/22 22:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:58:52</td>   <td>-16210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.createBookingAndVerifyResponse(com.mbm.bookingpojos.Booking,java.lang.reflect.Method)[pri:1, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">createBookingAndVerifyResponse</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:58:52</td>   <td>-16210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.createBookingAndVerifyResponse(com.mbm.bookingpojos.Booking,java.lang.reflect.Method)[pri:1, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">createBookingAndVerifyResponse</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:58:52</td>   <td>-16210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.createBookingAndVerifyResponse(com.mbm.bookingpojos.Booking,java.lang.reflect.Method)[pri:1, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">createBookingAndVerifyResponse</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:58:55</td>   <td>-12654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.Method)[pri:2, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">getBookingDetailsAndVerifyResponse</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:58:33</td>   <td>-34582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getBookingIdsAndVerifyResponse(java.lang.reflect.Method)[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">getBookingIdsAndVerifyResponse</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:06</td>   <td>-1439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getDeleteBooking(java.lang.reflect.Method)[pri:6, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">getDeleteBooking</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:04</td>   <td>-4252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getPartialUpdateBooking(java.lang.reflect.Method)[pri:5, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">getPartialUpdateBooking</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:00</td>   <td>-8096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTests.getUpdateBookingAndVerifyResponse(java.lang.reflect.Method)[pri:4, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">getUpdateBookingAndVerifyResponse</td> 
+  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
+<tr bgcolor="79bb76">  <td>25/08/22 22:59:05</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTests.setUp()[pri:0, instance:com.mbm.bookingtests.BookingTests@2807bdeb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@164439551</td>   <td></td> </tr>
 </table>
