--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,7 +108,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.mbm.bookingtests.BookingTests" class="method navigator-link" hash-for-method="getAccessTokenAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Meth...)">getAccessTokenAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Meth...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.mbm.bookingtests.BookingTests" class="method navigator-link" hash-for-method="createBookingAndVerifyResponse(Booking(firstname=tamoto, lastname=beto, totalprice=6000, depositpaid=true, bookingdates=BookingDate...)">createBookingAndVerifyResponse(Booking(firstname=tamoto, lastname=beto, totalprice=6000, depositpaid=true, bookingdates=BookingDate...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.mbm.bookingtests.BookingTests" class="method navigator-link" hash-for-method="createBookingAndVerifyResponse(Booking(firstname=Jack, lastname=Doe, totalprice=1000, depositpaid=false, bookingdates=BookingDates(...)">createBookingAndVerifyResponse(Booking(firstname=Jack, lastname=Doe, totalprice=1000, depositpaid=false, bookingdates=BookingDates(...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -164,10 +169,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getAccessTokenAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Meth...)">
-                  </a> <!-- getAccessTokenAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Meth...) -->
-                  <span class="method-name">getAccessTokenAndVerifyResponse</span>
-                  <span class="parameters">(public void com.mbm.bookingtests.BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Method))</span>
+                  <a name="createBookingAndVerifyResponse(Booking(firstname=tamoto, lastname=beto, totalprice=6000, depositpaid=true, bookingdates=BookingDate...)">
+                  </a> <!-- createBookingAndVerifyResponse(Booking(firstname=tamoto, lastname=beto, totalprice=6000, depositpaid=true, bookingdates=BookingDate...) -->
+                  <span class="method-name">createBookingAndVerifyResponse</span>
+                  <span class="parameters">(Booking(firstname=tamoto, lastname=beto, totalprice=6000, depositpaid=true, bookingdates=BookingDates(checkin=2025-03-19, checkout=2025-03-25), additionalneeds=Dinner),public void com.mbm.bookingtests.BookingTests.createBookingAndVerifyResponse(com.mbm.bookingpojos.Booking,java.lang.reflect.Method) throws com.fasterxml.jackson.databind.JsonMappingException,com.fasterxml.jackson.core.JsonProcessingException)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createBookingAndVerifyResponse(Booking(firstname=Jack, lastname=Doe, totalprice=1000, depositpaid=false, bookingdates=BookingDates(...)">
+                  </a> <!-- createBookingAndVerifyResponse(Booking(firstname=Jack, lastname=Doe, totalprice=1000, depositpaid=false, bookingdates=BookingDates(...) -->
+                  <span class="method-name">createBookingAndVerifyResponse</span>
+                  <span class="parameters">(Booking(firstname=Jack, lastname=Doe, totalprice=1000, depositpaid=false, bookingdates=BookingDates(checkin=2025-02-18, checkout=2025-02-25), additionalneeds=Lunch),public void com.mbm.bookingtests.BookingTests.createBookingAndVerifyResponse(com.mbm.bookingpojos.Booking,java.lang.reflect.Method) throws com.fasterxml.jackson.databind.JsonMappingException,com.fasterxml.jackson.core.JsonProcessingException)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -175,7 +188,7 @@
                   <a name="getBookingDetailsAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.M...)">
                   </a> <!-- getBookingDetailsAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.M...) -->
                   <span class="method-name">getBookingDetailsAndVerifyResponse</span>
-                  <span class="parameters">(public void com.mbm.bookingtests.BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.Method))</span>
+                  <span class="parameters">(public void com.mbm.bookingtests.BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.Method) throws java.io.IOException)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -221,11 +234,11 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite data-provider-thread-count=&quot;3&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.mbm.reporting.Setup&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;3&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.mbm.bookingtests.BookingTests&quot;/&gt;
     &lt;/classes&gt;
@@ -267,40 +280,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getBookingIdsAndVerifyResponse')
+data.setCell(0, 1, 'createBookingAndVerifyResponse')
 data.setCell(0, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(0, 3, 5617);
+data.setCell(0, 3, 4434);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createBookingAndVerifyResponse')
+data.setCell(1, 1, 'getBookingIdsAndVerifyResponse')
 data.setCell(1, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(1, 3, 4133);
+data.setCell(1, 3, 3263);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'getBookingDetailsAndVerifyResponse')
 data.setCell(2, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(2, 3, 1513);
+data.setCell(2, 3, 3153);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'getUpdateBookingAndVerifyResponse')
+data.setCell(3, 1, 'createBookingAndVerifyResponse')
 data.setCell(3, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(3, 3, 1393);
+data.setCell(3, 3, 2083);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'getAccessTokenAndVerifyResponse')
+data.setCell(4, 1, 'createBookingAndVerifyResponse')
 data.setCell(4, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(4, 3, 1283);
+data.setCell(4, 3, 2073);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'getDeleteBooking')
 data.setCell(5, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(5, 3, 1273);
+data.setCell(5, 3, 1434);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'getPartialUpdateBooking')
+data.setCell(6, 1, 'getUpdateBookingAndVerifyResponse')
 data.setCell(6, 2, 'com.mbm.bookingtests.BookingTests')
-data.setCell(6, 3, 1264);
+data.setCell(6, 3, 1415);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'getPartialUpdateBooking')
+data.setCell(7, 2, 'com.mbm.bookingtests.BookingTests')
+data.setCell(7, 3, 1400);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -327,34 +344,102 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.mbm.bookingtests.BookingTests</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getBookingIdsAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getBookingIdsAndVerifyResponse(java.lang.reflect.Metho...)</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">30328 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">33603 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">37684 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createBookingAndVerifyResponse(Booking(firstname=mbm, lastname=mannepalli, totalprice=3442, depositpaid=true, bookingdates=BookingD...)</span>
-                <span class="method-start">7831 ms</span>
+                <span class="method-start">39150 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">43609 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">43614 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createBookingAndVerifyResponse(Booking(firstname=Jack, lastname=Doe, totalprice=1000, depositpaid=false, bookingdates=BookingDates(...)</span>
+                <span class="method-start">45145 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">47242 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">47244 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createBookingAndVerifyResponse(Booking(firstname=tamoto, lastname=beto, totalprice=6000, depositpaid=true, bookingdates=BookingDate...)</span>
+                <span class="method-start">48699 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">50814 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">50820 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getBookingDetailsAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getBookingDetailsAndVerifyResponse(java.lang.reflect.M...)</span>
-                <span class="method-start">11981 ms</span>
+                <span class="method-start">52255 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getAccessTokenAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getAccessTokenAndVerifyResponse(java.lang.reflect.Meth...)</span>
-                <span class="method-start">13503 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">55413 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">55416 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getUpdateBookingAndVerifyResponse(public void com.mbm.bookingtests.BookingTests.getUpdateBookingAndVerifyResponse(java.lang.reflect.Me...)</span>
-                <span class="method-start">14792 ms</span>
+                <span class="method-start">56813 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">58233 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">58241 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getPartialUpdateBooking(public void com.mbm.bookingtests.BookingTests.getPartialUpdateBooking(java.lang.reflect.Method))</span>
-                <span class="method-start">16189 ms</span>
+                <span class="method-start">60657 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">62062 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">62066 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getDeleteBooking(public void com.mbm.bookingtests.BookingTests.getDeleteBooking(java.lang.reflect.Method))</span>
-                <span class="method-start">17459 ms</span>
+                <span class="method-start">63470 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">64908 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
